--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "clang++ - Build and Debug",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/Debug/Test.exe",
+      "program": "${workspaceFolder}/bin/Debug/Test.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
